--- a/frontsite/templates/frontsite/home.html
+++ b/frontsite/templates/frontsite/home.html
@@ -22,8 +22,8 @@
           Terima kasih telah bergabung di <strong>CoffeeShop</strong>. Nikmati kopi terbaik, suasana nyaman, dan layanan hangat setiap saat ☕
         </p>
         <div class="button-group">
-          <a href="{% url 'menu' %}" class="btn-coffee">☕ Lihat Menu</a>
-          <a href="{% url 'menu' %}" class="btn-coffee-outline">📦 Buat Pesanan</a>
+          <a href="{% url 'menu:menu' %}" class="btn-coffee">☕ Lihat Menu</a>
+          <a href="{% url 'menu:checkout' %}" class="btn-coffee-outline">📦 Buat Pesanan</a>
         </div>
       </div>
     </div>
