--- a/menu/templates/cart_modal.html
+++ b/menu/templates/cart_modal.html
@@ -33,7 +33,7 @@
 
       <div class="modal-footer d-flex justify-content-between">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-        <a href="{% url 'checkout' %}" class="btn btn-success btn-checkout">Checkout</a>
+        <a href="{% url 'menu:checkout' %}" class="btn btn-success btn-checkout">Checkout</a>
       </div>
     </div>
   </div>
