--- a/layouts/templates/base.html
+++ b/layouts/templates/base.html
@@ -34,13 +34,13 @@
               <a class="nav-link {% if request.path == '/home/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if request.path|slice:':6' == '/menu/' %}active{% endif %}" href="{% url 'menu' %}">Menu</a>
+              <a class="nav-link {% if request.path == '/menu/' %}active{% endif %}" href="{% url 'menu:menu' %}">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if request.path == '/menu/pesanan/' %}active{% endif %}" href="{% url 'pesanan' %}">Pesanan</a>
+              <a class="nav-link {% if request.path == '/menu/pesanan/' %}active{% endif %}" href="{% url 'menu:pesanan' %}">Pesanan</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link {% if request.path == '/menu/history/' %}active{% endif %}" href="{% url 'history' %}">History</a>
+              <a class="nav-link {% if request.path == '/menu/history/' %}active{% endif %}" href="{% url 'menu:history' %}">History</a>
             </li>
             <li class="nav-item">
               <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="{% url 'about' %}">About</a>
